* Made the behavior of the wikitext buttons the same for IE and FF * Fixed the default theme in IE 7 (had to add cellspacing=0 to tables that have border-collapse:separate;)

--- a/skin/default/css/ieLt8.css
+++ b/skin/default/css/ieLt8.css
@@ -1,7 +1,3 @@
-table { border-collapse: collapse; }
-table th { position: relative; }
-table td { position: relative; }
-
 #mainnav { padding: 1px; }
 #mainnav li { padding: 0; }
 #mainnav :link, #mainnav :visited { padding: 3px 20px 1px; background-position: 1px 0; }
